src/test/deca/context/invalid/IntEqNull.deca
// Description:
//    int = null
//
// Resultats:
//    Assignment Error
//
// Historique:
//    cree le 08/01/2023

{
	
	int a = null	
}
